@@ -1,0 +1,16 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+
+namespace jsc.meta.Library.Web
+{
+	public class SimpleMethodInfo
+	{
+		public string Name;
+
+		public SimpleParameterInfo ReturnParameter;
+
+		public SimpleParameterInfo[] Parameters;
+	}
+}
