@@ -16,6 +16,17 @@
 	<appSettings/>
 	<connectionStrings/>
 	<system.web>
+    <webServices>
+      <protocols>
+        <clear />
+        <add name="HttpPost"/>
+        <add name="Documentation"/>
+      </protocols>
+      <conformanceWarnings>
+        <remove name='BasicProfile1_1'/>
+      </conformanceWarnings>
+    </webServices>
+    
 		<!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
